--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -23,15 +23,17 @@
 
     &.halton-card--small {
       &.card-icon {
-        padding-top: calc( var(--halton-card-icon-padding-top) / 1.5);
+        padding-top: calc(var(--halton-card-icon-padding-top) / 1.5);
+
         &::before {
-          top: calc( var(--halton-card-icon-top-pos) / 2);
+          top: calc(var(--halton-card-icon-top-pos) / 2);
         }
       }
-      padding-top: calc( var(--halton-card-padding) / 2);
-      padding-right: calc( var(--halton-card-padding) / 2);
-      padding-bottom: calc( var(--halton-card-padding) / 2);
-      padding-left: calc( var(--halton-card-padding) / 2);
+
+      padding-top: calc(var(--halton-card-padding) / 2);
+      padding-right: calc(var(--halton-card-padding) / 2);
+      padding-bottom: calc(var(--halton-card-padding) / 2);
+      padding-left: calc(var(--halton-card-padding) / 2);
     }
 
     // ...
@@ -44,38 +46,64 @@
 
     &.card-icon {
       padding-top: var(--halton-card-icon-padding-top);
+
       &::before {
         top: var(--halton-card-icon-top-pos);
       }
     }
 
     .card-block {
-      &:last-of-type {
-      }
+      &:last-of-type {}
     }
 
     .card-body {
       padding: 0;
     }
-    .card-title {
-    }
+
+    .card-title {}
+
     .card-footer {
       margin-top: 20px;
     }
-    .card-subtitle {
-    }
+
+    .card-subtitle {}
+
     a:not(.btn) {
       // text-decoration: underline !important;
       color: var(--halton-clr-link) !important;
+
       &:hover {
         text-decoration: none !important;
       }
     }
-    p:last-child {
-    }
+
+    p:last-child {}
   }
+
   .halton-card.card-icon::before {
     color: #000000 !important;
     // top: 15px;
   }
 }
+
+
+
+// @layer card {
+
+
+//   .halton-card.theme-success {
+//     background-color: var(--halton-clr-success-bg);
+//   }
+//   .halton-card.theme-warning {
+//     background-color: var(--halton-clr-warning-bg);
+//   }
+//   .halton-card.theme-infrastructure {
+//     background-color: var(--halton-clr-infrastructure-bg);
+//   }
+//   .halton-card.theme-excellence {
+//     background-color: var(--halton-clr-excellence-bg);
+//   }
+//   .halton-card.theme-emergency {
+//     background-color: var(--halton-clr-emergency-bg);
+//   }
+// }
