--- a/styles/components/_icons.scss
+++ b/styles/components/_icons.scss
@@ -69,7 +69,7 @@
   .link-icon {
     &::before,
     &::after {
-      color: var(--halton-clr-link) !important;
+      color: var(--halton-clr-link);
     }
 
     &.icon-before {
