--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -11,18 +11,18 @@
 
 
     --halton-clr-neutral-light: #F3F3F3; // #EDEDED;
-    --halton-clr-success-bg: #E7F7E1;
-    --halton-clr-warning-bg: #F7F3E1;
-    --halton-clr-info-bg: #E1EFF7;
-    --halton-clr-infrastructure-bg: #F7EAE1;
-    --halton-clr-excellence-bg: #F1E1F7;
-    --halton-clr-emergency-bg: #F7E1E1;
+    --halton-clr-success-bg: #EFFFE8;
+    --halton-clr-warning-bg: #FFFAE8;
+    --halton-clr-info-bg: #E8F7FF;
+    --halton-clr-infrastructure-bg: #FFF2E8;
+    --halton-clr-excellence-bg: #F9E8FF;
+    --halton-clr-emergency-bg: #FFE8E9;
 
     --halton-clr-neutral-light-bdr: #C3C3C3;
-    --halton-clr-success-bdr: #9ED986;
-    --halton-clr-warning-bdr: #D9D386;
-    --halton-clr-info-bdr: #86BBD9;
-    --halton-clr-infrastructure-bdr: #D9A986;
-    --halton-clr-excellence-bdr: #C286D9;
-    --halton-clr-emergency-bdr: #D9868A;
+    --halton-clr-success-bdr: #9FD18B;
+    --halton-clr-warning-bdr: #FFD64F;
+    --halton-clr-info-bdr: #62B9EC;
+    --halton-clr-infrastructure-bdr: #E7975E;
+    --halton-clr-excellence-bdr: #C26AE4;
+    --halton-clr-emergency-bdr: #EF656B;
 }
