--- a/styles/designSystem/_index.scss
+++ b/styles/designSystem/_index.scss
@@ -3,6 +3,7 @@
     // border: 20px solid red;
     &:hover {
       // background: #EDF7E9;
+      cursor: copy;
       box-shadow: 0px 4px 40px 0px #000;
     }
   }
@@ -34,6 +35,9 @@
   p {
     color: #fff;
     font-size: 2.2rem;
+    .badge {
+        font-size: 2.2rem;
+    }
   }
 
   .ds-head-h1 {
@@ -60,6 +64,13 @@
 
   a {
     color: var(--halton-clr-neutral-accent-text);
+    &:hover {
+        color: var(--halton-clr-accent);
+    }
+  }
+
+  .disabled {
+    opacity: 0.5;
   }
 
   .container {
